# rsts

./: .gitignore  Cargo.toml  wsl_build.sh
app1/: .gitignore  Cargo.toml  build_all.txt  config.toml  readme.md
app1/.cargo/: config.toml
app1/db/: rsts.db
app1/src/: lib.rs  main.rs
app1/src/modules/: mod.rs
app1/src/modules/aigateway/: mod.rs  tianyi_api.rs
app1/src/modules/config/: config.rs  mod.rs
app1/src/modules/demo/: db_datatype_trans.rs  math.rs  mod.rs  pg_to_csv.rs  test1.rs  winapi.rs
app1/src/modules/logging/: mod.rs
app1/src/modules/operators/: base.rs  mod.rs  sobel.rs
app1/src/modules/proxy/: mod.rs  proxy_http.rs  proxy_tcp.rs
app1/src/modules/scheduled_task/: mod.rs  task_1.rs
app1/src/modules/sftp/: service.rs
app1/src/modules/sqllite/: mod.rs  sqlite_operations.rs
app1/src/modules/sqlstudio/: mod.rs  models.rs  postgresql.rs
app1/src/modules/ssh/: examples.rs  mod.rs  russh_client.rs  service.rs  ssh2_pty_client.rs  ssh_client.rs
app1/src/modules/task/: api.rs  service.rs
app1/src/modules/web/: actors.rs  apitest_api.rs  auth_middleware.rs  auth_tests.rs  auth_utils.rs  chat_api.rs  database.rs  database_models.rs  login_handler.rs  main_web.rs  mod.rs  models.rs  sftp_api.rs  sobel_ws.rs  sqlite_api.rs  ssh_monitor_api.rs  ssh_servers_api.rs  ssh_websocket.rs  ssh_websocket_pty.rs  template_engine.rs  websocket.rs
app2/src/: main.rs
app3/: Cargo.toml  build.rs  stop
app3/src/: main.rs  msr.rs
app3/temp_ohm/OpenHardwareMonitor/: OpenHardwareMonitor.config
db/: rsts.db
ui/: .env  .env.prod  .env.test  package.json
ui/src/components/text-editor/: index.vue
ui/src/components/xmodal/: index.vue
ui/src/locales/langs/: en-us.ts  zh-cn.ts
ui/src/router/elegant/: imports.ts  routes.ts  transform.ts
ui/src/service/api/: auth.ts  index.ts  route.ts  sftp.ts  user.ts
ui/src/service/request/: shared.ts
ui/src/theme/: settings.ts
ui/src/typings/: app.d.ts  components.d.ts  elegant-router.d.ts
(+35 files in other folders)
