[package]
name = "app3"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
ctrlc = "3.5.0"
libloading = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
eframe = "0.29.0"
sysinfo = "0.33.0"
wmi = "0.14.0"
raw-cpuid = "11.0"

[build-dependencies]
winres = "0.1"
